--- a/src/components/quote.css
+++ b/src/components/quote.css
@@ -1,6 +1,6 @@
 blockquote {
-  background-color: var(--lightGray);
-  width: 70%;
+  background-color: transparent;
+  width: 100%;
   margin: 2rem auto;
   font-size: 2.5rem;
   padding: 1.5rem;
